fix(order): fix database entities
